# EEDSolver

./: .gitignore  ARCHITECTURE.md  CLAUDE_CODE_HANDOFF.md  Cargo.toml  FIELD_THEORY.md  PROJECT.md  README.md  SETUP.md  V2_PLAN.md  docker-compose.yml  index.html  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
.beads/: issues.jsonl
solver/: Dockerfile  main.md  main.py  server.md  server.py
solver-gpu/: Cargo.toml
solver-gpu/src/: context.rs  error.rs  lib.rs  types.rs
solver-gpu/src/biot/: builders.rs  mod.rs
solver-gpu/src/grid/: mod.rs  state.rs
solver-gpu/src/physics/: eed.rs  gem.rs  mod.rs
solver-gpu/src/postproc/: mod.rs
solver-gpu/src/shaders/: biot.wgsl  c_field.wgsl  cg_scalar.wgsl  derive.wgsl  derive_gem.wgsl  fdtd_em.wgsl  fdtd_gem.wgsl  inject_j.wgsl  jacobi.wgsl  jacobi_a.wgsl  li_torr_source.wgsl  observables.wgsl
solver-gpu/tests/: biot_savart_validation.rs  c_field_validation.rs  c_field_wave.rs  energy_conservation.rs  holonomy_validation.rs  li_torr_validation.rs  performance_benchmark.rs  slw_propagation.rs  toroid_ab_validation.rs
solver/fields/: formulation.md  formulation.py  postproc.md  postproc.py  solver.md  solver.py
solver/geometry/: coil.md  coil.py  mesh.md  mesh.py
solver/models/: params.md  params.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.md  commands.rs  lib.md  lib.rs  main.md  main.rs  solver_client.md  solver_client.rs  types.md  types.rs
src/lib/: api.ts  colormap.ts  fieldTypes.ts
(+5 files in other folders)
